Bug #74327, fix badly positioned default slider after M3 update (#3318)
* Bug #74327, fix badly positioned default slider after M3 update

* Bug #74364, clamp value to prevent overlap, clean up comments to indicate coupled values

* Bug #74364, clean up comments

--- a/web/projects/portal/src/app/vsobjects/objects/input-label-wrapper/vs-input-label-wrapper.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/input-label-wrapper/vs-input-label-wrapper.component.scss
@@ -18,7 +18,6 @@
 :host {
   display: inline-block;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .vs-input-label-wrapper {
